# codescout

./: .gitignore  MANIFEST.in  README.md  codescout.py  codescout.sh  pyproject.toml  setup.py  vscode.env
codescout/: __init__.py  codescout.html  codescout.ini  codescout.py  codescout_gui.html  flask_codescout.py  scouts_pythonanywhere_com_wsgi.py
codescout.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: codescout.sh
src/codescout/: codescout.py
tests/: codescout.ipynb  codescout.sh
