# pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codescout"
version = "0.1.18"
description = "Permet de creer des codes scouts"
readme = "README.md"
authors = [{ name = "Vincent Fortin", email = "vincent.fortin@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    'Development Status :: 3 - Alpha',
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["code", "scout"]
dependencies = [
    "pillow",
]
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/vinfort/codescout"
